src/styles/global.css
@font-face {
  font-family: Gagalin;
    src: url('/fonts/Gagalin-Regular.ttf');
    src: url('/fonts/Gagalin-Regular.ttf') format('truetype');
}

* {
	box-sizing: border-box;
	margin: 0;
}

:root {
	font-size: clamp(0.575rem, 0.4626rem + 1.0309rem + var(--user-font-scale), 1.125rem);
  --agnostic-header-content-width: 95vw; /*set minimum size of header menu - set to percent of viewport width*/
  
  /* light mode */
  --agnostic-primary-modelight: #1f450a; /*button, tags links color*/
  --agnostic-primary-hover-modelight: #f1bd50; /*link hover color*/
  --agnostic-light-modelight: #ffffff; /* head & foot background colour*/
  --agnostic-gray-light-modelight: #faf7f3; /* body background colour*/
  --agnostic-gray-mid-modelight: #a7e478; /*card color*/
  
  --agnostic-font-color-modelight: #; /*font color; */

  --agnostic-dark-modelight: #000; /*font colour*/
  --agnostic-btn-primary-color-modelight: #5b8930;
  --agnostic-gray-mid-dark-modelight: #dad9d7a5; /*overlay color*/
  /* --agnostic-link-color-modelight: #708930; */

/* dark mode */
  --agnostic-primary-modedark: #57af0f; /*button, tags color*/
  --agnostic-primary-hover-modedark: #f1bd50; /*link hover color*/
  --agnostic-light-modedark: black; /* head & foot background colour*/
  --agnostic-gray-light-modedark: #111111; /* body background colour*/
  --agnostic-gray-mid-modedark: #37630a; /*card color*/
  --agnostic-dark-modedark: #fff; /*font colour*/
  --agnostic-btn-primary-color-modedark: #579a06;
  --agnostic-gray-mid-dark-modedark: #111111d7; /*overlay color*/
  /* --agnostic-link-color-modedark: #709a06; */

  /* for tables */
  --table-bg: var(--agnostic-light) !important;
  --table-accent-bg: var(--agnostic-gray-light) !important;
  --table-striped-color: var(--agnostic-dark) !important;
  --table-striped-bg: var(--agnostic-gray-mid) !important;
  --table-active-color: var(--agnostic-dark) !important;
  --table-active-bg: var(--agnostic-primary) !important;
  --table-hoverable-color: var(--agnostic-light) !important;
  --table-hoverable-bg: var(--agnostic-primary-hover) !important;



  --user-font-scale: 1.3em; /* Scale to apply to all fonts - slightly bigger for teachers' eyes */
}

 .header {
  background-color: var(--agnostic-light);
  color: var(--agnostic-dark);
  /* overflow-x: hidden; */
  /* position: fixed; */
  /* top:0; */
  /* z-index: 10; */
 }

 .footer{
  background-color: var(--agnostic-light);
  color: var(--agnostic-dark);
  /* width: 100%; */
 }

 html, body{
  width: 100%;
  margin: 0;
  padding: 0;
  overflow-x: hidden; 
}

 body {
  display: block; /* used to be grid */
  font-family: 'Work Sans', medium; 
  align-content: space-evenly;
  align-items: center;
  justify-items: center;
  background: var(--agnostic-gray-light);
  color: var(--agnostic-font-color);
  
}
.blog, .body-prj, .body-student, .body-faculty, .body-tech{
  background-color: var(--agnostic-light);
  max-width: 1440px;
  min-width: 500px;
  max-height: auto;
  margin: 1.5rem auto; /* don't remove centers body*/
  padding: 3rem;
}

/* Make all markdown paragraphs in the blog and projects sections in a centered box */
.blog p, .body-prj p, .body-student p, .body-faculty p{
  margin: 0 auto 0;
}
.body-prj ol, .body-prj ul, .blog ol, .blog ul, .body-student ol, .body-student ul, .body-faculty ol, .body-faculty ul{
  font-size: 1.25em; /*needed to set here because there's font differences in instructor & student pages*/
  margin: 0 auto 0;

}

.blog h1, .blog h2, .blog h3, .blog h4, 
.body-student h1, .body-student h2, .body-student h3, .body-student h4, 
.body-faculty h1, .body-faculty h2, .body-faculty h3, .body-faculty h4 {
  padding-top: 0.85em;
  text-align: center;
}

.body-prj h3{
  text-align: left;
  padding-top: 0.65em;
}

/* Project and blog pages show list bullets again, and also centered. */
.body-prj ol, .body-prj ul, .blog ol, .blog ul, .body-student ol, .body-student ul, .body-faculty ol, .body-faculty ul {
  display: inline-block;
  text-align: left;
  list-style: inside disc;
  font-family: 'Work Sans', medium;    
  max-width: 60em;
  margin-left: auto;
  margin-right: auto;
}

.body-student div{
  margin-left:1em; 
  margin-bottom:2em
}

.body-student ul{
  list-style-type: disc;
  width: 90%;
  margin-left:1em; 
  margin-bottom:2em
}

.body-prj iframe.youtube {
  width: 100%; 
  height: 50vw;
  margin-top: 2em;
  margin-bottom: 2em;
}

main {
  margin-left: 0;
  margin-right: 0;
  align-content: space-evenly;
  padding: 0;
  /* leftover from grid demo
  justify-content: space-evenly;
  align-items: center;
  justify-items: center;
  */ 
  width: clamp(26ch, 100%, 100%);
  position: relative;
}

h1 {
  text-align:center;
  font-size: clamp(var(--agnostic-h5), 5vw, var(--agnostic-h1));
  font-family: 'Gagalin', Helvetica, Arial, sans-serif;
  /* text-shadow: black 2px 1px; */
}

/* Kelechi: what is this for??? you can't change all paragraphs in project! */
p {
  margin: 0.24rem;
  padding: 4px;
}

a, .header a{
  color: var(--agnostic-primary) !important; 
}
a:hover, .header a:hover{
  color: var(--agnostic-primary-hover) !important;
  font-weight: 700 !important;
}

.tag, .button{
  background-color: var(--agnostic-primary);
  color: var(--agnostic-light) !important;
}

._menu-item-selected_17rak_74 {
  background-color: var(--agnostic-light) !important; /*removes primary color from menu selection in header*/
}
.project-cards-flex {  /*Project search page cards container */
justify-content: space-around;
  flex-flow: row wrap;
}

.card-container .card-main { /* div contains a single card on index page - more specific CSS selector takes priority */
  min-width: 20em !important;
  max-width: 30em;  
  padding: 1em;
  height: 20em;
  margin: 10px;
  text-align:center;
  /* 
  margin: auto;
  padding: 20px 10px; */
  /* margin-block-start: var(--fluid-40);
  padding-block-start: var(--fluid-16);
  padding-block-end: var(--fluid-40);
  margin-block-end: var(--fluid-40); */
  background-color: var(--agnostic-gray-mid);
}
.card-container .card-main .overlay{
  z-index: 2;
  background-color: var(--agnostic-gray-mid-dark); 
  background-size: cover;
  width: 100%; 
  height: 100%; 
  text-align: center;
  position: absolute; 
  top: 0; 
  left: 0;
}

.card-main ul {
  z-index: 3;
  display: inline-block;
  text-align: left;
  padding: 0.5rem;
}

.card-title { /*Card titles  */
  z-index: 3;
  text-align:center;
  font-size: clamp(var(--agnostic-h5), 1vw, var(--agnostic-h2));
  font-family: 'Gagalin', Helvetica, Arial, sans-serif;
}

.body-prj h2 {
  margin-top: 0.5em;
}

.card-container {
  justify-content: space-around;
  display: flex;
  flex-flow: row wrap;
  align-items: flex-start;
}

.valueprop {/*footer variable */
  font-size: clamp(var(--agnostic-h6), 1vw, var(--agnostic-h4));
}
.valueprop a { /*footer variable */
  font-size: clamp(var(--agnostic-h5), 2vw, var(--agnostic-h3));
}

/* TODO obsolete: remove from all projects? */
.body-prj .prj-txt{
  text-align:center; 
  /* margin-top:50px; */
}

/* TODO obsolete: remove from all projects? */
.body-prj .prj-list{
  flex: 1;
  text-align:left; 
  /* margin-top:50px; */
}

.materials-list{
  display: flex; 
  flex:1;
  justify-content: center; 
  min-width: 25em; 
  /* margin-top:50px */
}

/* Tech gallery in projects, can be embedded inside projects/[...projectId].astro */
.body-prj .gallery-list{
  text-align:center; 
  display: flex; 
  justify-content: center;
}

/* Only show light or dark image based on browser option */
.imageDark {
  display: none;
}
.imageLight {
  display: flex; /* Kelechi changed this  so that logos grow with page - each component has different size specs (header, footer, logos ) this way we can set them in their components*/
}
@media (prefers-color-scheme: dark) {
  .imageDark {
    display: flex; /* Kelechi changed this, not sure why */
  }
  .imageLight {
    display: none; 
  }
}



/* TODO -- we'll need to revisit this once AgnosticUI properly supports dark mode. Breadcrumb links
aren't accessible in terms of contrast in dark mode at the moment. */
/* @media (prefers-color-scheme: dark) {
  body {
    background: #0c2c43;
    color: #f9fafb;
	}
} */

